--- a/vue/package.json
+++ b/vue/package.json
@@ -25,7 +25,8 @@
     "vue-datepicker": "^1.3.0",
     "vue-head": "^2.0.11",
     "vue-resource": "^1.3.1",
-    "vue-router": "^2.3.1"
+    "vue-router": "^2.3.1",
+    "vue-slugify": "^0.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
