--- a/vue/package.json
+++ b/vue/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Go Blog",
+  "name": "Blog",
   "version": "1.0.0",
   "description": "Blog",
   "author": "devk <devkordesg@gmail.com>",
@@ -18,7 +18,8 @@
     "vue": "^2.3.3",
     "vue-datepicker": "^1.3.0",
     "vue-resource": "^1.3.4",
-    "vue-router": "^2.3.1"
+    "vue-router": "^2.3.1",
+    "vuex": "^2.4.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
